# Endpoint_Protection_Platform

./: .gitignore  CMakeLists.txt  HashCalculation.cpp  WindowsAv  main.cpp  windows_build.bat
Core/: CMakeLists.txt
Core/Headers/: ConfigManager.h  ServiceLocator.h
Core/Src/: ApplicationStartup.cpp  ServiceLocator.cpp
Database/: CMakeLists.txt
Database/Headers/: DbManager.h
Database/Src/: DbManager.cpp
Docker/: CMakeLists.txt
Docker/Headers/: DockerManager.h
Docker/Src/: DockerUIManager.cpp
Headers/: ApiManager.h  ApplicationStartup.h  CdrManager.h  ConfigManager.h  DbManager.h  DockerImageSelectionDialog.h  DockerManager.h  DockerUIManager.h  HashCalculation.h  HistoryDialog.h  ResultsView.h  SandboxManager.h  ScanManager.h  ServiceLocator.h  ServiceStatusDialog.h  ThreadPool.h  UserInterface.h  YaraRuleManager.h
Headers/Interfaces/: IDbManager.h  IDockerManager.h
Interfaces/: CMakeLists.txt
Interfaces/Headers/: IApiManager.h  ICdrManager.h  IDbManager.h  ISandboxManager.h  IYaraRuleManager.h
Network/: CMakeLists.txt
Network/Headers/: ApiManager.h
Network/Src/: ApiManager.cpp
Resources/: CMakeLists.txt  resources.qrc
Resources/styles/: main.qss
Scanning/: CMakeLists.txt
Scanning/Headers/: ScanManager.h
Scanning/Src/: ResultsView.cpp  ScanManager.cpp
Security/: CMakeLists.txt
Security/Headers/: CdrManager.h  SandboxManager.h  YaraRuleManager.h
Security/Src/: CdrManager.cpp  SandboxManager.cpp
Src/: ApiManager.cpp  ApplicationStartup.cpp  CdrManager.cpp  ConfigManager.cpp  DbManager.cpp  DockerImageSelectionDialog.cpp  DockerManager.cpp  DockerUIManager.cpp  HashCalculation.cpp  HistoryDialog.cpp  ResultsView.cpp  SandboxManager.cpp  ScanManager.cpp  ServiceLocator.cpp  ServiceStatusDialog.cpp  UserInterface.cpp  YaraRuleManager.cpp
ui/: CMakeLists.txt  apikeydialog.ui  dockerimageselectiondialog.ui  historydialog.ui  mainwindow.ui  servicestatusdialog.ui
ui/Headers/: MainWindow.h  UserInterface.h
ui/Headers/Dialogs/: ApiKeyDialog.h  DockerImageSelectionDialog.h  HistoryDialog.h  ServiceStatusDialog.h
ui/Headers/Widgets/: DashboardWidget.h  HistoryWidget.h  ResultsWidget.h  ScanWidget.h  SettingsWidget.h  SidebarWidget.h
ui/Src/: MainWindow.cpp  UserInterface.cpp
ui/Src/Dialogs/: ApiKeyDialog.cpp  DockerImageSelectionDialog.cpp  HistoryDialog.cpp  ServiceStatusDialog.cpp
ui/Src/Widgets/: DashboardWidget.cpp  HistoryWidget.cpp  ResultsWidget.cpp  ScanWidget.cpp  SettingsWidget.cpp  SidebarWidget.cpp
